# dingtalk-chat-summary

./: .mcp.json  README.md  README_EN  SKILL.md
agents/: openai.yaml
applescript-mcp/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
applescript-mcp/.github/workflows/: ci.yml
applescript-mcp/src/applescript_mcp/: __init__.py  _dev.py  server.py
applescript-mcp/tests/: test_server.py
mcp-applescript-server/: index.js  package.json
references/: app-operation.md  summary-rules.md
scripts/: prepare_chat_digest.py
